# helloWorldWIthGtest

./: CMakeLists.txt
tests/: TestHarness.cpp  test_hello.cpp
